# tiny_os_kernel

./: .gitignore  Cargo.toml  readme.md
doc/: ch1.md  ch2.md  ch3.md
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: config.rs  console.rs  entry.asm  linker.ld  main.rs  sbi.rs
kernel/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
kernel/src/task/: context.rs  manager.rs  mod.rs  switch.S  task_block.rs
kernel/src/trap/: context.rs  mod.rs  trap.S
