[package]
name = "kernel"
version = "0.1.0"
edition = "2021"  # 建议使用 2021 或更新

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"


[dependencies]
buddy_system_allocator = "0.9"
bitflags = "2.10.0"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
riscv = "0.13"